docker-build/deploy/yaml/ingress-dashboard/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/rewrite-target: /_ad-dbd/
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: qc.lacviet.vn
    http:
      paths:
      - path: /_ad-dbd/  # Add trailing slash for exact path match
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443  # Assuming your dashboard uses port 443 internally

---
  rules:
    - host: qc.lacviet.vn
      http:
        paths:
          - path: /lvfile/(.*)
            pathType: Prefix
            backend:
              service:
                name: lv-file-service
                port:
                  number: 80
