docker-build/deploy/yaml/ingress-dashboard/tham-khao.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-lvfile
  namespace: files
  uid: c94763ff-f3d3-4f28-bb8f-22ca2a270791
  resourceVersion: '17985406'
  generation: 1
  creationTimestamp: '2024-09-18T03:25:04Z'
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"200m","nginx.ingress.kubernetes.io/proxy-connect-timeout":"600s","nginx.ingress.kubernetes.io/proxy-read-timeout":"600s","nginx.ingress.kubernetes.io/rewrite-target":"/lvfile/$1","nginx.ingress.kubernetes.io/ssl-redirect":"false","nginx.ingress.kubernetes.io/use-regex":"true"},"name":"ingress-lvfile","namespace":"files"},"spec":{"ingressClassName":"nginx","rules": [...]
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/rewrite-target: /lvfile/$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-09-18T03:25:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:nginx.ingress.kubernetes.io/proxy-body-size: {}
            f:nginx.ingress.kubernetes.io/proxy-connect-timeout: {}
            f:nginx.ingress.kubernetes.io/proxy-read-timeout: {}
            f:nginx.ingress.kubernetes.io/rewrite-target: {}
            f:nginx.ingress.kubernetes.io/ssl-redirect: {}
            f:nginx.ingress.kubernetes.io/use-regex: {}
        f:spec:
          f:ingressClassName: {}
          f:rules: {}
    - manager: nginx-ingress-controller
      operation: Update
      apiVersion: networking.k8s.io/v1
      time: '2024-09-18T03:25:15Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:loadBalancer:
            f:ingress: {}
      subresource: status
spec:
  ingressClassName: nginx
  rules:
    - host: qc.lacviet.vn
      http:
        paths:
          - path: /lvfile/(.*)
            pathType: Prefix
            backend:
              service:
                name: lv-file-service
                port:
                  number: 80
status:
  loadBalancer:
    ingress:
      - ip: 172.16.7.240
      - ip: 172.16.7.99
